Complete Starlink Dashboard with installer and auto-start
Features:
- Real-time Starlink statistics monitoring
- System tray integration with status indicators
- Auto-start on Windows boot
- Live backend logs tab for debugging
- Professional NSIS installer with Python dependency setup
- Fixed quit functionality
- Improved error handling and user feedback

Technical:
- Electron + FastAPI architecture
- Chart.js for data visualization
- Background polling every 2 seconds
- Logs capture and display
- Admin build script for proper installer creation

Includes helper scripts:
- build-installer-admin.ps1 (auto-requests admin)
- build-installer.bat (manual admin)
- setup-python-deps.bat (installer helper)
- check-dependencies.bat (troubleshooting tool)
- TROUBLESHOOTING.md (user guide)

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ __pycache__/
 *.pyo
 *.log
 *.spec
+*.egg-info/
+.venv/
+venv/
+env/
 
 # Node.js
 node_modules/
@@ -14,10 +18,26 @@ package-lock.json
 
 # Electron
 dist/
-build/
 out/
 *.exe
 *.dmg
+*.AppImage
+
+# Build artifacts
+build/*.exe
+build/*.ico
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+desktop.ini
 *.AppImage
 
 # Legacy (old CustomTkinter app)
