Add icon files to repository for installer builds
- Updated .gitignore to allow build/*.ico and build/*.png
- Added icon.ico and icon.png needed for installer creation
- Fixes GitHub Actions build failure

--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,9 @@ out/
 *.dmg
 *.AppImage
 
-# Build artifacts
+# Build artifacts - but keep icon files
 build/*.exe
-build/*.ico
+# build/*.ico - Allow icon files for installer
 
 # IDE
 .vscode/
