Disable electron-builder auto-publish in CI
- Added 'publish: null' to prevent auto-publish to GitHub
- Workflow will handle release creation separately

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "build": {
     "appId": "com.starlink.dashboard",
     "productName": "Starlink Dashboard",
+    "publish": null,
     "win": {
       "target": [
         {
