--- a/.github/workflows/build-installer.yml
+++ b/.github/workflows/build-installer.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master
+    tags:
+      - 'v*'
   workflow_dispatch: # Allows manual trigger from GitHub UI
 
 jobs:
