--- a/.github/workflows/build-installer.yml
+++ b/.github/workflows/build-installer.yml
@@ -35,6 +35,24 @@ jobs:
       - name: Install Python dependencies
         run: pip install -r requirements.txt
 
+      - name: Validate version match (on tag)
+        if: startsWith(github.ref, 'refs/tags/v')
+        shell: pwsh
+        run: |
+          $tag = git describe --tags --exact-match
+          $tagVersion = $tag -replace '^v', ''
+          $packageVersion = (Get-Content package.json | ConvertFrom-Json).version
+          
+          Write-Host "Git tag version: $tagVersion"
+          Write-Host "package.json version: $packageVersion"
+          
+          if ($tagVersion -ne $packageVersion) {
+            Write-Error "Version mismatch! Git tag is v$tagVersion but package.json has version $packageVersion"
+            exit 1
+          }
+          
+          Write-Host "✓ Version validation passed: $tagVersion"
+
       - name: Build installer
         env:
           CSC_IDENTITY_AUTO_DISCOVERY: false
@@ -44,16 +62,7 @@ jobs:
         id: version
         shell: pwsh
         run: |
-          # Try to get version from git tag first
-          $tag = git describe --tags --exact-match 2>$null
-          if ($tag -and $tag -match '^v(.+)$') {
-            $version = $matches[1]
-            echo "Using version from tag: $version"
-          } else {
-            # Fall back to package.json version
-            $version = (Get-Content package.json | ConvertFrom-Json).version
-            echo "Using version from package.json: $version"
-          }
+          $version = (Get-Content package.json | ConvertFrom-Json).version
           echo "version=$version" >> $env:GITHUB_OUTPUT
 
       - name: Upload installer artifact
